Import from webcam available #141

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -919,20 +919,11 @@
 								</div>
 							</div>
 							<h4 class="text-popup-yellow font-bold mb-0">This feature is WIP! It might be unstable or buggy!</h4>
+							<!-- 
 							<br />
 							<hr />
-							<h3>Use webcam for import</h3>
-							<h4>You can use your webcam to scan QR code(s). Works well with high quality webcams.</h4>
-							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
-								<a href="#" onclick="webcam()">
-									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-										<input tabindex="-1" id="tgl8" type="checkbox" class="toggle" />
-										<label for="tgl8" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
-								></a>
-								<span id="tgt8" class="text-black text-xl">-</span>
-							</div>
-							<h4 class="text-popup-yellow font-bold mb-0">This feature is WIP! It might be unstable or buggy!</h4>
-							<!-- <h4 class="text-popup-red font-bold mb-0">This feature is WIP! Use it at your own risk!</h4> -->
+							<h4 class="text-popup-red font-bold mb-0">This feature is WIP! Use it at your own risk!</h4> 
+							-->
 						</div>
 					</div>
 				</div>
