--- a/app/import/index.html
+++ b/app/import/index.html
@@ -27,7 +27,7 @@
 		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
 			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 			<h2>Import</h2>
-			<h4>You can import from QR code(s) and Google Authenticator QR code(s). You can use your webcam by turning on an experimental feature in settings.</h4>
+			<h4>You can create your import file from QR codes and Google Authenticator QR codes.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -40,19 +40,19 @@
 		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center">
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20 mt-20" id="choose">
 				<h2 class="pt-5">Instructions</h2>
-				<h3>If you don't know what to do please read the documentation and come back here!</h3>
+				<h3>You can create your import file here. For more information please read the documentation.</h3>
 				<button class="buttoni" id="but0" onclick="onlineDocs()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
 					</svg>
-					Read documentation
+					Documentation
 				</button>
 			</div>
 
 			<div class="choose">
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
 					<h2 class="pt-5">Import</h2>
-					<h3>QR code(s)</h3>
+					<h3>QR code</h3>
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
 						<h4>
@@ -91,11 +91,11 @@
 
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
 					<h2 class="pt-5">Advanced import</h2>
-					<h3>Google Authenticator QR code(s)</h3>
+					<h3>Google Authenticator QR code</h3>
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
 						<h4>
-							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the image(s) you transferred.
+							Tap on the three dots on the top right corner of the screen and export your accounts, take a picture of the export QR code(s), and choose the image(s) you saved and transferred to your computer.
 							<br />
 							<br />
 							If you need more steps or help:
