--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -231,7 +231,7 @@
 					<div class="mx-auto text-center mt-20 mb-20 pt-5 pb-10 rounded-2xl bg-gray-700 w-3/5">
 						<div id="setting" class="tabcontent">
 							<h3>Launch on startup</h3>
-							<h4>Start the app after the operating system started. The app will start on the tray.</h4>
+							<h4>Start Authme after your computer started. Authme will start on the system tray.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 									<input id="tgl0" onclick="startup()" type="checkbox" class="toggle" />
@@ -241,7 +241,7 @@
 							</div>
 							<hr />
 							<h3>Close app to tray</h3>
-							<h4>On closing the app will not quit. You can open the app from the tray.</h4>
+							<h4>When closing Authme the app will not quit. You can open Authme from the system tray.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 									<input id="tgl1" onclick="tray()" type="checkbox" class="toggle" />
@@ -285,21 +285,21 @@
 							</button>
 							<hr />
 							<h3>Open folders</h3>
-							<h4>You can open the folders Authme uses to function. Editing or deleting files might cause problems.</h4>
+							<h4>You can open the folders Authme uses. Editing or deleting files might cause problems.</h4>
 							<div class="flex justify-center gap-3 flex-row flex-wrap">
-								<button class="buttoni" id="but3" onclick="folder0()">
+								<button class="buttoni" onclick="authmeFolder()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 19a2 2 0 01-2-2V7a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1M5 19h14a2 2 0 002-2v-5a2 2 0 00-2-2H9a2 2 0 00-2 2v5a2 2 0 01-2 2z" />
 									</svg>
 									Authme folder
 								</button>
-								<button class="buttoni" id="but4" onclick="folder1()">
+								<button class="buttoni" onclick="settingsFolder()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 19a2 2 0 01-2-2V7a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1M5 19h14a2 2 0 002-2v-5a2 2 0 00-2-2H9a2 2 0 00-2 2v5a2 2 0 01-2 2z" />
 									</svg>
 									Settings folder
 								</button>
-								<button class="buttoni" id="but12" onclick="folder2()">
+								<button class="buttoni" onclick="cacheFolder()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 19a2 2 0 01-2-2V7a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1M5 19h14a2 2 0 002-2v-5a2 2 0 00-2-2H9a2 2 0 00-2 2v5a2 2 0 01-2 2z" />
 									</svg>
@@ -309,12 +309,21 @@
 							<hr />
 							<h3>Logs</h3>
 							<h4>You can view the logs for debugging. You can view all the logs in the settings folder.</h4>
-							<button class="buttoni" id="but14" onclick="logs()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
-								</svg>
-								Latest log
-							</button>
+							<div class="flex justify-center gap-3 flex-row flex-wrap">
+								<button class="buttoni" onclick="latestLog()">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+									</svg>
+									Latest log
+								</button>
+								<button class="buttoni" onclick="logsFolder()">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 19a2 2 0 01-2-2V7a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1M5 19h14a2 2 0 002-2v-5a2 2 0 00-2-2H9a2 2 0 00-2 2v5a2 2 0 01-2 2z" />
+									</svg>
+									Logs folder
+								</button>
+							</div>
+
 							<hr />
 							<h3>Status</h3>
 							<h4>Current status of the API, used for updates only. Click for all the status information.</h4>
@@ -328,7 +337,7 @@
 						<!-- codes -->
 						<div id="codes" class="tabcontent part hidden">
 							<h3>Show 2FA descriptions</h3>
-							<h4>The saved 2FA description will be visible. You can copy it after clicking it.</h4>
+							<h4>The saved 2FA descriptions will be visible. You can copy it after clicking it.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="names()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -340,7 +349,7 @@
 							<br />
 							<hr />
 							<h3>Blur codes</h3>
-							<h4>Blurs the 2FA code. You can still copy it or hover over it to reveal.</h4>
+							<h4>Blurs the 2FA codes. You can still copy it or hover over it to reveal.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="reveal()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -379,7 +388,7 @@
 						<div id="shortcuts" class="tabcontent part hidden">
 							<h3>Shortcuts</h3>
 							<h4>
-								You can modify the shortcuts here, if you don't understand something just read the docs.
+								You can modify the shortcuts here, read the documentation for more information.
 								<br />
 								Shortcuts not work on this page, go back to the settings tab to reactivate them!
 							</h4>
@@ -387,7 +396,7 @@
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
 								</svg>
-								Read docs
+								Documentation
 							</button>
 							<br />
 							<br />
@@ -803,7 +812,7 @@
 							<hr />
 							<h3>Global shortcuts</h3>
 							<h4>
-								You can modify the global shortcuts here, if you don't understand something just read the docs.
+								You can modify the global shortcuts here, read the documentation for more information.
 								<br />
 								Shortcuts not work on this page, go back to the settings tab to reactivate them!
 							</h4>
@@ -811,7 +820,7 @@
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
 								</svg>
-								Read docs
+								Documentation
 							</button>
 							<br />
 							<br />
@@ -921,7 +930,7 @@
 						<!-- experimental -->
 						<div id="experimental" class="tabcontent part hidden">
 							<h3>Sort codes</h3>
-							<h4>You can choose how to sort the saved and loaded codes. By default codes are sorted by uploading order.</h4>
+							<h4>You can choose how to sort the codes. By default codes are sorted by importing order.</h4>
 							<div class="dropdown">
 								<button class="dropdown-button" id="drp0" onclick="dropdown()">
 									<svg id="sort_svg" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
