--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -215,7 +215,7 @@
 					</div>
 
 					<!-- header -->
-					<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
+					<div id="header" class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
 						<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 						<h2>Settings</h2>
 						<h4>You can configure the app settings here.</h4>
@@ -277,7 +277,7 @@
 							</div>
 							<h3>Clear data</h3>
 							<h4>Clear password, 2FA codes and all other settings. Be careful.</h4>
-							<button class="buttoni" id="but1" onclick="reset()">
+							<button class="buttoni" id="but1" onclick="clearData()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
 								</svg>
