Drop dragonfly css

--- a/app/import/index.html
+++ b/app/import/index.html
@@ -9,7 +9,7 @@
 		<script defer src="./src/js/qr.js"></script>
 		<script defer src="./src/js/ga.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/global.css" />
 		<link rel="stylesheet" href="../../src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
