--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -7,7 +7,7 @@
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/shortcuts.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/global.css" />
 		<link rel="stylesheet" href="../../src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
