--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- meta -->
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; img-src 'self' data:" />
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
 		<meta charset="UTF-8" />
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/global.css" />
