Fix details and summary

--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -45,8 +45,8 @@
 						</button>
 					</div>
 					<div class="mx-auto pb-3">
-						<details class="mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
-							<summary class="font-bold mb-3 cursor-pointer">More options</summary>
+						<details class="details mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
+							<summary class="summary font-bold mb-3 cursor-pointer">More options</summary>
 						</details>
 					</div>
 				</div>
