--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -78,8 +78,8 @@
 						</button>
 					</div>
 					<div class="mx-auto pb-5">
-						<details class="mb-5 transform ease-in duration-200">
-							<summary class="font-bold mb-3 cursor-pointer">More options</summary>
+						<details class="details mb-5 transform ease-in duration-200">
+							<summary class="summary font-bold mb-3 cursor-pointer">More options</summary>
 							<div class="flex flex-row justify-center gap-3 flex-wrap">
 								<button class="buttoni" onclick="revertChanges()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
