--- a/app/export/index.html
+++ b/app/export/index.html
@@ -74,8 +74,8 @@
 
 					<!-- advanced -->
 					<div class="mx-auto p-3">
-						<details class="mb-5 transform ease-in duration-200">
-							<summary class="font-bold mb-3 cursor-pointer">More options</summary>
+						<details class="details mb-5 transform ease-in duration-200">
+							<summary class="summary font-bold mb-3 cursor-pointer">More options</summary>
 							<div>
 								<button class="buttoni" id="but1" onclick="saveFile()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
