--- a/app/import/index.html
+++ b/app/import/index.html
@@ -53,8 +53,8 @@
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
 					<h2 class="pt-5">Import</h2>
 					<h3>QR code</h3>
-					<details class="details1" id="dt">
-						<summary class="summary1">Instructions</summary>
+					<details class="details mb-8">
+						<summary class="summary">Instructions</summary>
 						<h4>
 							Just screenshot the QR code(s) you want to import, save them on your computer, and choose the image(s) you saved.
 							<br />
